--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "apollo-link-context": "^1.0.18",
     "graphql": "^14.4.2",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.8",
+    "react-apollo": "2.5.3",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
